--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#32C2B3</color>
     <color name="colorGreyBar">#80888888</color>
+    <color name="colorTitle">#3C4245</color>
+    <color name="colorSubTitle">#A5A9AF</color>
+    <color name="colorLine">#ECEFF1</color>
 </resources>
